--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
       <div class="columns">
         <div class="column">
           <h5 class="title is-6">Power (W)</h5>
-          <div id="Live_Power_Chart" class="chart" style="width: 70%; height: 500px;"></div>
+          <div id="Live_Power_Chart" class="chart" style="width: 100%; height: 500px;"></div>
         </div>
-        <div id="live_img" style="width: 25%; height: 300px;">
+<!--         <div id="live_img" style="width: 25%; height: 300px;">
           Live image of CNC machine
-          <img src="imgs/test_img.png" alt="hi" class="inline"/>
-        </div>
+          <img src="imgs/test_img.png" class="inline"/>
+        </div> -->
       </div>
     </div>
   </section>
-  
+
   <section class="scan">
     </div>
     <div class="container-fluid" style="margin-top:40px">
-      <iframe src="test.html" width="100%" height="500px"></iframe>
+      <iframe src="test.html" height="500px"></iframe>
     </div>
   </section>
   <!-- <div id="chart_div" style="width: 100%; height: 200px;"></div> -->
