--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         
 // ................... ACOUSTIC EMISSION ............................ //
       const dataTable3 = google.visualization.arrayToDataTable([
-        ['Time', 'Voltage (V)'],
+        ['Time', 'Pascal (dB)'],
         [new Date('hh-mm-ss'),0],
       ]);
       const chart3 = new google.visualization.ScatterChart(
