--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="columns">
         <div class="column">
-          <h5 class="title is-6">Acoustic Emission (V)</h5>
+          <h5 class="title is-6">Acoustic Emission (dB)</h5>
           <div id="Live_ae_Chart" class="chart3" style="width: 100%; height: 300px;"></div>
         </div>
       </div>
