--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
         const row4 = [new Date(data4.ye,data4.mo,data4.da,data4.ho,data4.mi,data4.se,data4.ms), data4.acc_x];
         dataTable4.addRow(row4);
         chart4.draw(dataTable4, options4);
-//         const row5 = [new Date(data4.ye,data4.mo,data4.da,data4.ho,data4.mi,data4.se,data4.ms), data4.acc_y];
-//         dataTable4.addRow(row5);
-//         chart4.draw(dataTable4, options5);
-//         const row6 = [new Date(data4.ye,data4.mo,data4.da,data4.ho,data4.mi,data4.se,data4.ms), data4.acc_z];
-//         dataTable4.addRow(row6);
-//         chart4.draw(dataTable4, options6);
+        const row5 = [new Date(data4.ye,data4.mo,data4.da,data4.ho,data4.mi,data4.se,data4.ms), data4.acc_y];
+        dataTable4.addRow(row5);
+        chart4.draw(dataTable4, options5);
+        const row6 = [new Date(data4.ye,data4.mo,data4.da,data4.ho,data4.mi,data4.se,data4.ms), data4.acc_z];
+        dataTable4.addRow(row6);
+        chart4.draw(dataTable4, options6);
       });
     });
   </script>
