--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="columns">
         <div class="column">
           <h5 class="title is-6">Power (W)</h5>
-          <div id="Live_Power_Chart" class="chart" style="width: 100%; height: 300px;"></div>
+          <div id="Live_Power_Chart" class="chart" style="width: 100%; height: #300px;"></div>
         </div>
       </div>
     </div>
@@ -29,7 +29,7 @@
       <div class="columns">
         <div class="column">
           <h5 class="title is-6">Temperature (C)</h5>
-          <div id="Live_temp_Chart" class="chart2" style="width: 100%; height: 300px;"></div>
+          <div id="Live_temp_Chart" class="chart2" style="width: 100%; height: #300px;"></div>
         </div>
       </div>
     </div>
@@ -39,7 +39,7 @@
       <div class="columns">
         <div class="column">
           <h5 class="title is-6">Acoustic Emission (dB)</h5>
-          <div id="Live_ae_Chart" class="chart3" style="width: 100%; height: 300px;"></div>
+          <div id="Live_ae_Chart" class="chart3" style="width: 100%; height: #300px;"></div>
         </div>
       </div>
     </div>
