--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
       <div class="columns">
         <div class="column">
           <h5 style="font-size:2em"  class="title is-6">Dynamometer [kN]</h5>
+            <h7 style="font-size:1em"  class="title is-6">Force (X-axis) [kN]</h7>
           <div id="Live_acc_Chart_x" class="chart4" style="width: 100%; height: 200px;"></div>
+            <h7 style="font-size:1em"  class="title is-6">Force (Y-axis) [kN]</h7>
           <div id="Live_acc_Chart_y" class="chart5" style="width: 100%; height: 200px;"></div>
+            <h7 style="font-size:1em"  class="title is-6">Force (Z-axis) [kN]</h7>
           <div id="Live_acc_Chart_z" class="chart6" style="width: 100%; height: 200px;"></div>
         </div>
       </div>
@@ -90,9 +93,10 @@
 
       const options = {
         hAxis: {title: 'Time' , titleTextStyle: {color: '#333', fontSize: 26, bold: true}},
-        vAxis: {minValue: 0, titleTextStyle: {color: '#333', fontSize: 26, bold: true}},
+        vAxis: {minValue: 0, textStyle: {color: '#333', fontSize: 26, bold: true}},
         animation:{duration: 100, easing: 'inAndout'},
-        annotations:{ alwaysOutside: true, textStyle: {fontSize: 26}}
+        annotations:{ alwaysOutside: true, textStyle: {fontSize: 26}},
+        legend: {position: 'Top', textStyle: {bold: true}}
       };
 
       Pusher.logToConsole = true;
@@ -115,13 +119,6 @@
       const chart2 = new google.visualization.ScatterChart(
         document.getElementById('Live_temp_Chart'));
 
-      const options2 = {
-        hAxis: {title: 'Time' , titleTextStyle: {color: '#333', fontSize: 26, bold: true}},
-        vAxis: {minValue: 0, titleTextStyle: {color: '#333', fontSize: 26, bold: true}},
-        animation:{duration: 100, easing: 'inAndout'},
-        annotations:{ alwaysOutside: true, textStyle: {fontSize: 26}}
-      };
-        
       const pusher2 = new Pusher('7ed63ca2bc241415db8f', { // Replace with 'key' from dashboard
         cluster: 'us3',              // Replace with 'cluster' from dashboard
         forceTLS: true
