--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Live Power on CNC Machine at ATAMI</title>
+  <title>Live Power on CNC Machine at ATAMI (Oregon State University)</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
   <style>
       .chart {
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="columns">
         <div class="column">
-          <h5 style="font-size:2em"  class="title is-6">Acoustic Emission [Pa]</h5>
+          <h5 style="font-size:2em"  class="title is-6">Acoustic Pressure [Pa]</h5>
           <div id="Live_ae_Chart" class="chart3" style="width: 100%; height: 300px;"></div>
         </div>
       </div>
